RESOLVED FIXED284859
REGRESSION (iOS 18.2): Scrolling does not work on websites built on Flutter
https://bugs.webkit.org/show_bug.cgi?id=284859
Summary REGRESSION (iOS 18.2): Scrolling does not work on websites built on Flutter
Tim Horton
Reported 2024-12-17 16:47:52 PST
REGRESSION (iOS 18.2): Scrolling does not work on websites built on Flutter
Attachments
Tim Horton
Comment 1 2024-12-17 16:47:53 PST
Tim Horton
Comment 2 2024-12-17 16:54:51 PST
EWS
Comment 3 2024-12-17 21:47:48 PST
Committed 287988@main (474e17e9c9a8): <https://commits.webkit.org/287988@main> Reviewed commits have been landed. Closing PR #38115 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.